Release 2.7.5
=============

Bugs fixed
----------

- division and floordivision through the delegator `.ro` provided with
  R vectors wrapped by `robjects`.
  

Release 2.7.4
=============

Bugs fixed
----------

- Python 3.5 highlighted slightly incorrect C-level flags in rpy2 objects
  declarations, and :mod:`rpy2.robjects` could not be imported.
  
- Fixed unit tests for rmagic when :mod:`numpy` is not installed, and
  for :mod:`numpy` is installed by :mod:`pandas` in missing.


Release 2.7.3
=============

Bugs fixed
----------

- method :meth:`DataFrame.collect` in :mod:`rpy2.robjects.lib.dplyr`
  was not functioning.
  
- Applied patch by Matthias Klose to fix implict pointer conversions.

- :mod:`pandas2ri.ri2py_dataframe` is now propagating the row names
  in the R data frame into an index in the pandas data frame (issue #285)

- methods `union`, `intersect`, `setdiff`, `ungroup` defined in the R package
  `dplyr` were missing from the
  `DataFrame` definition in :mod:`rpy2.robjects.lib.dplyr`


Release 2.7.2
=============

Bugs fixed
----------

- methods `distinct`, `sample_n`, and `sample_frac` defined in the R package
  `dplyr` were missing from the `DataFrame` definition in
  :mod:`rpy2.robjects.lib.dplyr`

- The fix for the inheritance problem with
  :mod:`rpy2.robjects.lib.dplyr.DataFrame` introduced a regression whenever
  `group_by` is used.

- The methods to perform joins on dplyr `DataFrame` objects where not
  working properly.


Release 2.7.1
=============

Bugs fixed
----------

- The :meth:`__repr__` for :mod:`robjects`-level vectors
  was broken for vectors of length 1 (issue #306)

- The ipython notebook-based sections of the documentation
  were not building

- Classes inheriting from :mod:`dplyr.DataFrame` had dplyr methods
  returning objects of their parent class.


Release 2.7.0
=============

New features
------------

- New exception :class:`rpy2.rinterface.RParsingError`. Errors